--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/PolishedProfiles/polished-profiles-backend#readme",
   "dependencies": {
+    "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3"
   }
 }
