--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   "dependencies": {
     "axios": "^1.3.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1"
   }
 }
