--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   "homepage": "https://github.com/PolishedProfiles/polished-profiles-backend#readme",
   "dependencies": {
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "express-fileupload": "^1.4.0",
+    "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1"
   }
 }
