added initial config

--- a/config/config.sample..json
+++ b/config/config.sample..json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "your_username",
+    "username": "username",
     "password": null,
     "database": "polished-portfolio",
     "host": "127.0.0.1",
