--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "sequelize-cli": "^6.6.0",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
     "express-fileupload": "^1.4.0",
     "pdf-parse": "^1.1.1"
 
