--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "polished-profiles-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "resumeGenerator.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "db:config": "sequelize init:config",
+    "db:create": "sequelize db:create",
+    "test": "NODE_ENV=test jest --verbose --coverage",
+    "test-watch": "NODE_ENV=test jest --watchAll --verbose --coverage"
   },
   "repository": {
     "type": "git",
@@ -20,8 +23,18 @@
   "homepage": "https://github.com/PolishedProfiles/polished-profiles-backend#readme",
   "dependencies": {
     "axios": "^1.3.5",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.0.1",
+    "openai": "^3.2.1",
+    "pg": "^8.10.0",
+    "sequelize": "^6.31.0",
+    "sequelize-cli": "^6.6.0",
+    "sqlite3": "^5.1.6",
+    "supertest": "^6.3.3",
+    "uuid": "^9.0.0"
   }
 }
