--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-OPENAI_API_KEY
-PORT
-DATABASE_URL
+OPENAI_API_KEY=<your-api-key>
+PORT=3001
+DATABASE_URL=postgres://localhost:5432/polished-portfolio
