--- a/package.json
+++ b/package.json
@@ -22,21 +22,22 @@
   },
   "homepage": "https://github.com/PolishedProfiles/polished-profiles-backend#readme",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.0.4",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jest": "^29.5.0",
+    "express-fileupload": "^1.4.0",
+    "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "openai": "^3.2.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.10.0",
     "sequelize": "^6.31.0",
     "sequelize-cli": "^6.6.0",
     "sqlite3": "^5.1.6",
     "supertest": "^6.3.3",
-    "uuid": "^9.0.0",
-    "express-fileupload": "^1.4.0",
-    "pdf-parse": "^1.1.1"
+    "uuid": "^9.0.0"
   }
 }
